# ethtool-android

./: .gitignore  CMakeLists.txt  README.md
ethtool-5.18/: Makefile.am  Makefile.in  NEWS  configure  configure.ac  ethtool.8  ethtool.8.in  ethtool.c  ethtool.spec
ethtool-5.18/autom4te.cache/: output.0  requests  traces.0  traces.1
ethtool-5.18/netlink/: desc-ethtool.c  extapi.h  fec.c  netlink.h  rings.c  settings.c
